hphp/hack/test/typecheck/upcast_errors.php.exp
File "upcast_errors.php", line 5, characters 3-15:
Typing error (Typing[4110])
  File "upcast_errors.php", line 5, characters 13-15:
  Expected `int`
  File "upcast_errors.php", line 4, characters 12-14:
  But got `num`
File "upcast_errors.php", line 9, characters 3-15:
Typing error (Typing[4110])
  File "upcast_errors.php", line 9, characters 13-15:
  Expected `int`
  File "upcast_errors.php", line 8, characters 22-22:
  But got `T as num`
File "upcast_errors.php", line 13, characters 3-20:
Typing error (Typing[4110])
  File "upcast_errors.php", line 13, characters 17-19:
  Expected `int`
  File "upcast_errors.php", line 12, characters 16-18:
  But got `num`
File "upcast_errors.php", line 17, characters 3-23:
Typing error (Typing[4110])
  File "upcast_errors.php", line 16, characters 19-21:
  Expected `int`
  File "upcast_errors.php", line 17, characters 20-22:
  But got `num`
  File "upcast_errors.php", line 17, characters 20-22:
  This type argument to `Vector` must match exactly (it is invariant)
